@@ -7,7 +7,8 @@
 	  repeated fields.
 	* src/wrapper_Message.cpp (rprotobuf): Remove Rf_error in favor of
 	  Rcpp_error so that we throw an exception and unwind the stack to
-	  deallocate objects before jumping to R' serror.
+	  deallocate objects before jumping to R's error.
+	* src/DescriptorPoolLookup.cpp (rprotobuf): Idem.
 	* R/size.R: Correct an incorrect method name that prevented size<-
 	  from working.
 	* man/size.Rd: Document the behavior of size<-
